MicroUI/manifest/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todoui
  template:
    metadata:
      labels:
        app: todoui
    spec:
      containers:
      - name: todoui
        image: todoappacr111.azurecr.io/microtodoui:latest
        ports:
        - containerPort: 80
